<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.CalculatorActivity">

        <EditText
            android:id="@+id/et_number"
            android:layout_width="0dp"
            android:layout_height="320dp"
            android:autofillHints="@string/hint_zero"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto"
            android:gravity="bottom|end"
            android:hint="@string/hint_zero"
            android:inputType="number"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="3dp"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/tl_numbers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_number" />

        <TableLayout
            android:id="@+id/tl_numbers"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:weightSum="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_number">

            <TableRow
                style="@style/TableRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/ib_btn_clear_all"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/btn_al"
                    app:srcCompat="@drawable/ic_clear_all" />

                <ImageButton
                    android:id="@+id/ib_btn_backspace"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/btn_backspace"
                    app:srcCompat="@drawable/ic_backspace" />

                <ImageButton
                    android:id="@+id/ib_btn_percent"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/btn_percent"
                    app:srcCompat="@drawable/ic_percent" />

                <ImageButton
                    android:id="@+id/ib_btn_divide"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/btn_divide"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_divide" />
            </TableRow>

            <TableRow
                style="@style/TableRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/ib_number_seven"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/number_seven"
                    app:srcCompat="@drawable/ic_seven" />

                <ImageButton
                    android:id="@+id/ib_number_eight"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/number_eight"
                    app:srcCompat="@drawable/ic_eight" />

                <ImageButton
                    android:id="@+id/ib_number_nine"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/number_nine"
                    app:srcCompat="@drawable/ic_nine" />

                <ImageButton
                    android:id="@+id/ib_btn_multiple"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/btn_multiple"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_multiple" />
            </TableRow>

            <TableRow
                style="@style/TableRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/ib_number_four"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/number_four"
                    app:srcCompat="@drawable/ic_four" />

                <ImageButton
                    android:id="@+id/ib_number_five"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/number_five"
                    app:srcCompat="@drawable/ic_five" />

                <ImageButton
                    android:id="@+id/ib_number_six"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/number_six"
                    app:srcCompat="@drawable/ic_six" />

                <ImageButton
                    android:id="@+id/ib_btn_minus"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/btn_minus"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_minus" />
            </TableRow>

            <TableRow
                style="@style/TableRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/ib_number_one"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/number_one"
                    app:srcCompat="@drawable/ic_one" />

                <ImageButton
                    android:id="@+id/ib_number_two"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/number_two"
                    app:srcCompat="@drawable/ic_two" />

                <ImageButton
                    android:id="@+id/ib_number_three"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/number_three"
                    app:srcCompat="@drawable/ic_three" />

                <ImageButton
                    android:id="@+id/ib_btn_plus"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/btn_plus"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    app:srcCompat="@drawable/ic_plus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/ib_new"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btn_expansion"
                    app:srcCompat="@android:color/transparent" />

                <ImageButton
                    android:id="@+id/ib_number_zero"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/number_zero"
                    app:srcCompat="@drawable/ic_zero" />

                <ImageButton
                    android:id="@+id/ib_btn_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"

                    android:contentDescription="@string/dot"
                    app:srcCompat="@drawable/ic_dot" />

                <ImageButton
                    android:id="@+id/ib_btn_equal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btn_equal"
                    app:srcCompat="@drawable/press_btn_effect" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>